kubernetes-ansible/roles/graphql/templates/graphql-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: graphql-ingress
spec:
  rules:
    - http:
        paths:
          - path: /graphql-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: graph-graphql-service
                port:
                  number: 4001
